--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 streamlit
+langchain-community
 langchain-core
 langchain-text-splitters
-chromadb
 langchain-groq
 langchain-huggingface
-langchain-community
+chromadb
+pysqlite3-binary
